<resources>
    <string name="app_name">tugas02</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Slamet Nugroho</string>
    <string name="nav_header_nim">118140189</string>
    <string name="nav_header_subtitle">slamet.118140189@student.itera.ac.id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_skill">Skill</string>
    <string name="skilldetail">Skill Detail</string>
    <string name="detail">Detail</string>
    <string name="textskilldetail">Coba INi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>