<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tugas02.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tugas02.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tugas02.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_skill"
        android:name="com.example.tugas02.ui.skill.SkillFragment"
        android:label="@string/menu_skill"
        tools:layout="@layout/fragment_skill" >
        <action
            android:id="@+id/action_nav_skill_to_nav_skilldetail2"
            app:destination="@id/nav_skilldetail" />
    </fragment>

    <fragment
        android:id="@+id/nav_skilldetail"
        android:name="com.example.tugas02.ui.skill.SKillDetailFragment"
        android:label="@string/skilldetail"
        tools:layout="@layout/fragment_s_kill_detail" >
        <argument
            android:name="extra_name"
            app:argType="string" />
    </fragment>

</navigation>